Added all sections

--- a/index.html
+++ b/index.html
@@ -8,6 +8,133 @@
     <h1>
         This is my resume!
     </h1>
+    <address>
+        999 Avenue, Utah, 81000
+    </address>
+    <a href="mailto:kribuchman@gmail.com">Kristian</a><br>
+    <hr>
+    <section>
+        <h2>
+            Career Goals
+        </h2>
+        I want to become a well respected full stack developer as well as a blog
+        writer so that I can share what I've learned. I want to be indipendant so
+        that I may work from whereever I please. I'd also love to work on games and
+        apps in my free time.
+    </section>
+    <section>
+        <h2>
+            Skills
+        </h2>
+        <ol>
+            <li>Programming Languages</li>
+            <ul>
+                <li>Java</li>
+            </ul>
+            <li>Databases</li>
+            <ul>
+                <li>MySQL</li>
+            </ul>
+            <li>Platforms</li>
+            <ul>
+                <li>Ruby on Rails</li>
+                <li>Android</li>
+            </ul>
+            <li>Version Conrol</li>
+            <ul>
+                <li>Git</li>
+            </ul>
+            <li>Operating Systems</li>
+            <ul>
+                <li>Linux</li>
+                <li>Windows</li>
+            </ul>
+            <li>Other tools</li>
+            <ul>
+                <li>Vim</li>
+                <li>Bash</li>
+                <li>Ssh</li>
+            </ul>
+            <li>Soft Skills</li>
+            <ul>
+                <li>Documentation</li>
+                <li>Passion</li>
+            </ul>
+    </section>
+    <section>
+        <h2>
+            Work Experience
+        </h2>
+        <table>
+            <tr>
+                <th>Time</th>
+                <th>Name</th>
+                <th>Location</th>
+                <th>Position Title</th>
+                <th>Responsibilities</th>
+                <th>Contact Info</th>
+            </tr>
+            <tr>
+                <td>Two Years</td>
+                <td>Smith's</td>
+                <td>SLC</td>
+                <td>Pharmacy Tech</td>
+                <td>Counting, data entry, customer service</td>
+                <td>###-###-9999</td>
+            </tr>
+        </table>
+    </section>
+    <section>
+        <h2>
+            Education
+        </h2>
+        <table>
+            <tr>
+                <th>Time</th>
+                <th>School</th>
+                <th>Location</th>
+            </tr>
+            <tr>
+                <td>Two Years</td>
+                <td>University of Utah</td>
+                <td>Salt Lake City</td>
+            </tr>
+        </table>
+    </section>
+    <section>
+        <h2>
+            Achievements
+        </h2>
+        <ul>
+            <li>This is where stuff would go lmao</li>
+        </ul>
+    </section>
+    <section>
+        <h2>
+            Hobbies and Interests
+        </h2>
+        <ul>
+            <li>Super Smash Bros. Melee</li>
+            <li>Emulation</li>
+            <li>Android Roms</li>
+            <li>Linux</li>
+            <li>Rap Music</li>
+            <li>Folk Music</li>
+        </ul>
+    </section>
+    <section>
+        <h2>
+            References
+        </h2>
+        <p>Available upon request</p>
+    </section>
+    <footer>
+        <strong>
+            <address>
+                999 Avenue, Utah, 81000
+            </address>
+            <a href="mailto:kribuchman@gmail.com">Kristian</a><br>
+        </strong>
+    </footer>
 </body>
-
 </html>
